[tool.poetry]
name = "pubreplaygui"
version = "0.1.0"
description = ""
authors = ["Matthew Chadwick <dr.m.chadwick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
loguru = "^0.7.3"
pyinstaller = "^6.14.0"
tkloguru = "^0.1.2"
cx-freeze = "^8.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
